--- a/css/style.css
+++ b/css/style.css
@@ -23,11 +23,21 @@ header {
 }
 
 header .logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
     color: #fff;
     font-size: 1em;
     font-weight: 700;
     text-transform: uppercase;
     letter-spacing: 2px;
+}
+
+header .logo img {
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
 }
 
 header nav ul li a {
@@ -171,9 +181,11 @@ main .libros-container .card-libro {
     flex-direction: column;
     padding: 20px;
     border-radius: 10px;
-    flex: 1 250px; /* crece o se reduce según espacio */
-    max-width: 300px; /* ancho máximo */
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    flex: 1 250px;
+    /* crece o se reduce según espacio */
+    max-width: 300px;
+    /* ancho máximo */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
 }
 
@@ -258,6 +270,64 @@ main .libros-container .card-libro .info-libro .descargas button:hover {
 }
 
 
+main .estadisticas {
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 40px;
+    padding: 40px 20px;
+    background-color: #f5f5f5;
+    text-align: center;
+
+}
+
+main .estadisticas h3 {
+
+    margin-top: 40px;
+    font-size: 3rem;
+}
+
+main .estadisticas p {
+    font-size: 1.2rem;
+    color: #757575;
+
+}
+
+
+footer {
+
+    background-color: #e1e1e1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+footer span {
+
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 40px;   
+}
+
+footer span h3,img{
+
+    font-size: 1.5rem;
+    font-weight: 600;
+    letter-spacing: 2px;
+    margin-bottom: 20px;
+}
+
+footer  p{
+
+    font-size: 1rem;
+    color: #757575;
+    margin-bottom: 40px;
+    text-align: center;
+    
+}
 
 @media (max-width: 640px) {
     header {
