Cambios header pagina

--- a/css/style.css
+++ b/css/style.css
@@ -15,29 +15,33 @@ header {
     top: 0;
     left: 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     width: 100%;
-    padding: 20px 100px;
+    padding: 10px;
     z-index: 100;
 }
 
 header .logo {
+
     display: flex;
     justify-content: center;
-    align-items: center;
-    gap: 10px;
+    gap: 15px;
     color: #fff;
-    font-size: 1em;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 2px;
 }
 
-header .logo img {
-    width: 40px;
-    height: 40px;
-    object-fit: cover;
+header .logo svg path{
+
+    fill: #fff;
+    
+}
+
+header h1 {
+
+    font-size: 26px;
+    font-weight: 700;
+    letter-spacing: 2px;
+   
 }
 
 header nav ul li a {
@@ -49,6 +53,8 @@ header nav ul li a {
     letter-spacing: 2px;
 }
 
+
+
 header.scroll {
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -58,10 +64,13 @@ header.scroll {
 }
 
 header.scroll .logo,
+header.scroll .logo svg path,
 header.scroll nav ul li a {
     color: #000;
     transition: 0.5s;
+    fill: #000;
 }
+
 
 /* Hero */
 main .hero {
@@ -182,9 +191,7 @@ main .libros-container .card-libro {
     padding: 20px;
     border-radius: 10px;
     flex: 1 250px;
-    /* crece o se reduce según espacio */
     max-width: 300px;
-    /* ancho máximo */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
 }
@@ -309,10 +316,11 @@ footer span {
     display: flex;
     align-items: center;
     gap: 10px;
-    margin-top: 40px;   
+    margin-top: 40px;
 }
 
-footer span h3,img{
+footer span h3,
+img {
 
     font-size: 1.5rem;
     font-weight: 600;
@@ -320,13 +328,13 @@ footer span h3,img{
     margin-bottom: 20px;
 }
 
-footer  p{
+footer p {
 
     font-size: 1rem;
     color: #757575;
     margin-bottom: 40px;
     text-align: center;
-    
+
 }
 
 @media (max-width: 640px) {
@@ -340,6 +348,9 @@ footer  p{
         margin-bottom: 20px;
         font-size: 1em;
     }
+
+
+
 
     main .hero {
         height: 100vh;
@@ -373,6 +384,7 @@ footer  p{
         margin-bottom: 20px;
         font-size: 1em;
     }
+
 
     main .hero {
         height: 100vh;
