--- a/css/book.css
+++ b/css/book.css
@@ -14,9 +14,9 @@
 /* Header */
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    padding: 20px 100px;
+    padding: 10px;
     position: fixed;
     top: 0;
     left: 0;
