--- a/css/style.css
+++ b/css/style.css
@@ -48,9 +48,7 @@ header nav ul li a {
     color: #fff;
     font-size: 1em;
     font-weight: 500;
-    margin-left: 40px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
+    margin-left: 20px
 }
 
 
